# pebble-ai

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fsutil.rs  lib.rs  main.rs  ocr.rs  state.rs  system.rs  weather.rs
src-tauri/src/ai/: mod.rs  ollama.rs  prompt.rs  web.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/executor/: mod.rs
src-tauri/src/fsops/: mod.rs  scan.rs  summarize.rs
src-tauri/src/intent/: mod.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/models/: action.rs  data.rs  message.rs  mod.rs  records.rs
src-tauri/src/planner/: mod.rs
src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/safety/: mod.rs  paths.rs  rules.rs  validator.rs
src-tauri/src/trash/: mod.rs
src-tauri/src/undo/: mod.rs
src/components/: Accordion.tsx  Dropdown.tsx  Notices.tsx  Onboarding.tsx  Pebble.tsx  RenameModal.tsx  ThemeBackground.tsx  Toast.tsx  TopBar.tsx  WelcomeBack.tsx
src/components/actions/: PlanModal.tsx  PlanView.tsx
src/components/chat/: ChatView.tsx  Composer.tsx  MessageBubble.tsx  QueryResultCard.tsx
src/components/files/: FilesView.tsx
src/components/history/: HistoryView.tsx
src/components/settings/: SettingsView.tsx
src/components/trash/: TrashView.tsx
src/lib/: constants.ts  format.ts  ipc.ts  readiness.ts  themes.ts  types.ts
src/store/: appStore.ts
src/styles/: app.css
